# MEPHI-fastapi-auth-module

./: .gitignore  .pre-commit-config.yaml  alembic.ini  fast_api_auth.sqlite  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 2024_11_20_1319-46c305956d85_auth_1.py
src/auth/: requires_roles.py
src/core/: config.py  db.py  logging.py
src/dao/auth/: auth_user.py
src/exeptions/: auth.py  base.py
src/models/: __init__.py  auth.py  base.py
src/schemas/web/: auth.py  error.py  roles_test_api.py
src/web/: main.py
src/web/routers/: roles_test.py
tests/: conftest.py
tests/auth/roles_acess/: test_available_for_authenticated.py
